Version 2.9.1dev:

* Can install kick33180.A500 / kick33180.A500.RTB for WHDLoad.
* Fixed save state dir when starting with UUID parameter.

Version 2.9.0dev:

* New option whdload_boot_dir must be used to enable an old feature,
  previously it was enabled by the presence of Hard Drives/WHDLoad.
* Removed some debug code left by accident (causing rating variants to fail).
* Make game scanner more forgiving if parent game uuid is not found.
* Fixed problem where rating could be reset for first loaded game/variant.
* New experimental option: relative_temp_feature.

Version 2.7.15dev:

* Imported updated translations from crowdin.com.

Version 2.7.14dev:

* Fixed recently introduced problem using joystick configuration tool.
* A3000 chip RAM was erroneously set to 1 MB.
* Added new languages to language selector: Esperanto, Dutch and Hungarian.
* Imported updated translations from crowdin.com.

Version 2.7.13dev:

* Show launch dialog when running configs directly from command line.
* Show launch errors (if any) in error message box when running from cmdline.
* Use expect_version option to verify that FS-UAE version matches.
* Launcher can be started with a zip/lha file containing disk images [jbl007].
* Launcher can be started with more than one floppy image path as
  command line arguments.
* Launcher can be started with more than one CD-ROM image path as
  command line arguments (will default to CD32 model in this case).
* Properly load last config file (if applicable) when starting.
* Unsaved config options will no longer be restored on startup (last
  used game or config will be fully reloaded).
* When using --config:key=value options, start with empty config (unless
  a specific config is loaded via the command line).
* Store maximized = 0 state properly when window is unmaximized.
* Imported updated translations from crowdin.com.

Version 2.7.12dev:

* Added settings for for FS-UAE Arcade.
* Minor fixes for scan/refresh dialogs.